<resources>
    <string name="app_name">DepositCalculator</string>

    <string name="income_deposit_data_Sum">Сумма вклада</string>
    <string name="income_deposit_data_Refill">Сумма пополнения</string>
    <string name="income_deposit_data_Percent">Годовая % ставка</string>
    <string name="income_deposit_data_TimeInterval">Срок, месяцев</string>
    <string name="income_deposit_data_CapitalizationName">Капитализация</string>

    <string name="income_deposit_data_OwnSumView">Сумма без процентов</string>
    <string name="income_deposit_data_PercentView">Начисленные проценты</string>
    <string name="income_deposit_data_OwnSumWithPercent">Общая сумма</string>

    <string name="button_schedule">График</string>


    <string-array name="spinner_capitalization">
        <item>В конце срока</item>
        <item>Ежемесячная</item>
        <item>Ежеквартальная</item>
        <item>Ежегодная</item>
    </string-array>
    
</resources>
